--- a/src/app/components/homeshows/HomeShows.css
+++ b/src/app/components/homeshows/HomeShows.css
@@ -6,6 +6,7 @@
 }
 
 .home-shows-container li {
+  max-width: 350px;
   transition: all 0.3s ease;
   position: relative;
 }
